--- a/blocks/hamburger/hamburger.css
+++ b/blocks/hamburger/hamburger.css
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 1024px) {
   .hamburger {
-    margin-left: calc(100vw - 72px - 19px);
+    margin-left: calc(100vw - 72px - 17px);
     bottom: calc(100vh - 72px);
   }
 }
